manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "devopsforjavashopstestfeatureflags-4afb"
    labels:
        app: "devopsforjavashopstestfeatureflags-4afb"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "devopsforjavashopstestfeatureflags-4afb"
